<?xml version="1.0"?>
<package>
  <name>choreonoid_rosplugin</name>
  <version>1.6.0</version>
  <description>The Choreonoid ROSPlugin package</description>

  <maintainer email="s.nakaoka@aist.go.jp">Shin'ichiro Nakaoka</maintainer>

  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://choreonoid.org</url>

  <author email="s.nakaoka@aist.go.jp">Shin'ichiro Nakaoka</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
