<?xml version="1.0"?>
<package>
  <name>choreonoid_rosplugin</name>
  <version>1.6.0</version>
  <description>The Choreonoid ROSPlugin package</description>

  <maintainer email="s.nakaoka@aist.go.jp">Shin'ichiro Nakaoka</maintainer>

  <license>MIT</license>

  <url type="website">http://choreonoid.org</url>
  <url type="repository">https://choreonoid.org/git/rosplugin.git</url>

  <author email="s.nakaoka@aist.go.jp">Shin'ichiro Nakaoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>choreonoid</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>choreonoid</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
  </export>
</package>
